--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,10 @@
     font-style: normal;
   }
 
+.visibility-hidden {
+  visibility: hidden;
+}
+
 @layer base {
     html {
       font-family: Urbanist, system-ui, sans-serif;
